# banshee

./: .cvsignore  .gitignore  AUTHORS  Banshee.mds  Banshee.sln  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.include  NEWS  NOTES  README  README.trunk  Sonance.prj  autogen.osx.sh  autogen.sh  banshee.doap  banshee.mdp  banshee.mds  banshee.pc.in  config.h.in  configure.ac  cvs-targen.sh  dev-configure.sh  sonance.mdp  sonance.mds  sonance.pc.in  vacuum.sh
burn-sharp/: .cvsignore  ActionChangedHandler.cs  AnimationChangedHandler.cs  BurnDrive.cs  BurnDriveSelection.cs  BurnDriveType.cs  BurnMediaType.cs  BurnRecorder.cs  BurnRecorderActions.cs  BurnRecorderBlankFlags.cs  BurnRecorderBlankType.cs  BurnRecorderError.cs  BurnRecorderMedia.cs  BurnRecorderResponse.cs  BurnRecorderResult.cs  BurnRecorderTrack.cs  BurnRecorderTrackType.cs  BurnRecorderWriteFlags.cs  CancelFunc.cs  InsertMediaRequestHandler.cs  Makefile.am  NautilusSharp.CancelFuncNative.cs  ProgressChangedHandler.cs  WarnDataLossHandler.cs  burn-sharp.dll.config.in  burn-sharp.sources  glue.c  sync-tree.sh
data/: .cvsignore  Makefile.am  Makefile.in  Tables.sql  TranslatorExtract.cs  UIManagerLayout.xml  audio-profiles.xml  banshee-1.desktop.in.in  banshee-dialogs.glade  banshee-preview.desktop.in.in  banshee.desktop.in  banshee.desktop.in.in  banshee.glade  banshee.schemas.in  contributors.xml  mimetypes.pl  mimetypes.txt  org.bansheeproject.Banshee.service.in  org.bansheeproject.CollectionIndexer.service.in  org.gnome.Banshee.service.in  sonance.desktop.in  update-desktop-file.sh
data/audio-profiles/: Makefile.am  aac.xml  aac.xml.in  base.xml  base.xml.in  flac.xml  flac.xml.in  mp3-lame.xml  mp3-lame.xml.in  mp3-xing.xml  mp3-xing.xml.in  vorbis.xml  vorbis.xml.in  wav.xml  wav.xml.in  wavpack.xml  wavpack.xml.in  wma.xml  wma.xml.in
data/desktop-files/: Makefile.am  banshee-1-audiocd.desktop.in.in  banshee-1-media-player.desktop.in.in  banshee-1-playlist.desktop.in.in  banshee-1-playlist.desktop.mime  banshee-1-subscription.desktop.in.in  banshee-1-subscription.desktop.mime  banshee-1.desktop.in.in  banshee-1.desktop.mime  common.desktop  update-desktop-file.sh
data/glade/: .cvsignore  Makefile.am  Makefile.in  about.glade  newipod.glade  player.glade  preferences.glade  trackinfo.glade
data/icon-theme-hicolor/: Makefile  Makefile.am  Makefile.in
data/images/: Makefile.am  Makefile.am.build  Makefile.in
docs/: .cvsignore  Makefile.am  MonodocNodeConfig.cs  banshee-docs.source  monodoc.mk
docs/Banshee/: Makefile.am  banshee-docs.source
docs/Hyena/: Makefile.am  hyena-docs.source
docs/design-docs/: indexer-client.odg
docs/en/: Banshee.Dap.xml  Banshee.Gstreamer.xml  Banshee.MediaEngine.xml  Banshee.Plugins.xml  Banshee.xml  Hal.xml  MusicBrainz.xml  NetworkManager.xml  Sql.xml  index.xml
entagged/: AudioFile.cs  AudioFileIO.cs  AudioFileWrapper.cs  EncodingInfo.cs  EntaggedTest.cs  Makefile.am  Tag.cs  entagged-sharp.sources  entagged.sources  sync-tree.sh
entagged/Ape/: ApeTag.cs  MonkeyFileReader.cs
entagged/Exceptions/: CannotReadException.cs
entagged/Flac/: FlacFileReader.cs
entagged/M4a/: M4aFileReader.cs  M4aTag.cs
entagged/Mp3/: Id3Tag.cs  Mp3FileReader.cs
entagged/Mpc/: MpcFileReader.cs
entagged/Ogg/: OggFileReader.cs  OggTag.cs
entagged/Util/: AudioFileReader.cs  ByteBuffer.cs  CustomAttributes.cs  TagField.cs  Utils.cs
entagged/ape/: ApeTag.cs  MonkeyFileReader.cs
entagged/exceptions/: CannotReadException.cs
entagged/flac/: FlacFileReader.cs
entagged/generic/: AbstractTag.cs  AudioFileReader.cs  ByteBuffer.cs  GenericTag.cs  TagField.cs  TagTextField.cs  Utils.cs
entagged/mp3/: Id3v1Tag.cs  Id3v2Tag.cs  Mp3FileReader.cs
entagged/mpc/: MpcFileReader.cs
entagged/ogg/: OggFileReader.cs  OggTag.cs
hal-sharp/: .cvsignore  Communication.cs  DBusError.cs  Device.cs  HalCallbacks.cs  HalContext.cs  HalDefines.cs  HalDevice.cs  HalExceptions.cs  HalUnmanaged.cs  Makefile.am  Manager.cs  hal-sharp.dll.config.in  hal-sharp.mdp  hal-sharp.sources  sync-tree.sh
libbanshee/: .cvsignore  GNOME_Media_CDDBSlave2.idl  Makefile.am  banshee-bpmdetector.c  banshee-gst.c  banshee-gst.h  banshee-player-cdda.c  banshee-player-cdda.h  banshee-player-equalizer.c  banshee-player-equalizer.h  banshee-player-missing-elements.c  banshee-player-missing-elements.h  banshee-player-pipeline.c  banshee-player-pipeline.h  banshee-player-private.h  banshee-player-replaygain.c  banshee-player-replaygain.h  banshee-player-video.c  banshee-player-video.h  banshee-player-vis.c  banshee-player-vis.h  banshee-player.c  banshee-player.h  banshee-ripper.c  banshee-tagger.c  banshee-tagger.h  banshee-transcoder.c  cd-detect.c  cd-detect.h  cd-info.c  cd-info.h  cd-rip.c  cd-rip.h  cd-test.c  cddb-slave-client.c  cddb-slave-client.h  cddb-test.c  clutter-gst-shaders.h  clutter-gst-video-sink.c  clutter-gst-video-sink.h  (+37 more)
libsonance/: Library.sdb  Makefile.am  Makefile.in  metadata.c  metadata.h  mm-keys.c
plugincore/: .cvsignore  IPlayerEngine.cs  ITrackInfo.cs  Makefile.am  Paths.cs  TrackInfo.cs  plugincore.mdp  plugincore.mds
src/: .cvsignore  AboutBox.cs  ActiveUserEvent.cs  ActiveUserEventsManager.cs  AlbumCoverFetch.cs  AltProgressBar.cs  AmazonSearchService.wsdl  AssemblyInfo.cs.in  AudioCdCore.cs  Banshee.mds  BansheeDbusClient.Makefile  BansheeDbusClient.cs  BansheeImport.cs  BurnCore.cs  BurnTransaction.cs  CddbClient.cs  CddbSlaveClient.cs  CommonTags.cs  ConfigureDefines.cs.in  Core.cs  CoverArtThumbnail.cs  DBusIPC.cs  DapPropertiesDialog.cs  Database.cs  DateButton.cs  DebugLog.cs  DecoderRegistry.cs  Dialogs.cs  Disclosure.cs  DragDrop.cs  EllipsizeLabel.cs  ExceptionDialog.cs  FileChooserButton.cs  FileEncodeTransaction.cs  FileEncoder.cs  FileNamePattern.cs  FileTrackInfo.cs  GConfKeys.cs  GstFileEncoder.cs  GstMetadata.cs  (+69 more)
tests/: .cvsignore  Banshee.Kernel.cs  BansheeTests.cs  ConsoleUi.cs  GenericCollectionController.cs  Makefile.am  PlaylistFormats.cs  compare-perf-results  test-a11y  test-perf  tests.mdp
tools/: .cvsignore  BansheeDBusClient.cs  Makefile.am
(+4217 files in other folders)
